# forest

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  CREDENTIALS.md  Dockerfile  PLAN.md  README.md  backend_README.md  debug_api.py  generate_chart.py  main.py  out.txt  pyproject.toml  pytest_error.txt  requirements.txt  test_dynamic_data.py
backend/api/: __init__.py  config.py  db.py  main.py  schemas.py
backend/api/routers/: __init__.py  action_plan.py  density.py  forecast.py  forest_metrics.py  health.py  layers.py  risk.py  species.py  system.py
backend/database/: __init__.py  db.py
backend/features/: __init__.py  extractor.py
backend/ingestion/: __init__.py  downloader.py
backend/models/: __init__.py  tables.py
backend/processing/: __init__.py  preprocess.py
backend/scripts/: run_smoke_pipeline.py
backend/services/: __init__.py  forest_metrics_service.py  ml_bridge.py  region_pipeline_service.py
backend/services/ml/: __init__.py  density_model.pkl  feature_pipeline.py  forecast.py  health_and_risk.py  ml_README.md  test_system_integration.py  train_realistic_model.py
backend/sql/: bootstrap.sql
backend/tests/: conftest.py  test_action_plan.py  test_api_contract.py  test_forest_metrics_service.py  test_ml_integration.py
frontend/: .env.example  README.md  frontend_README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/c0.wp.com/: index.html
frontend/src/: App.css  App.tsx  api.ts  main.tsx  router.tsx
scripts/: run_backend_pipeline.py
(+131 files in other folders)
