[project]
name = "backend"
version = "0.1.0"
description = "Forest analytics backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"geoalchemy2>=0.15.2",
	"pydantic-settings>=2.4.0",
	"psycopg[binary]>=3.2.0",
	"sqlalchemy>=2.0.35",
	"uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
	"httpx>=0.27.0",
	"pytest>=8.3.0",
]
